; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_test_lvalue.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_test_lvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@vtop = common dso_local global %struct.TYPE_2__* null, align 8
@VT_LVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"lvalue\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_lvalue() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @vtop, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @VT_LVAL, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = call i32 @expect(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  ret void
}

declare dso_local i32 @expect(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
